--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.MAD_ASSIGNMENT_1"
         tools:targetApi="31">
         <activity
-            android:name=".add_expenses"
+            android:name=".AddExpenses"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
