--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.MAD_ASSIGNMENT_1"
         tools:targetApi="31">
         <activity
+            android:name=".Graph"
+            android:exported="false" />
+        <activity
             android:name=".AddExpenses"
             android:exported="false" />
         <activity
